Fixed dropdown menu in dark mode

--- a/client/style/note-home-list.css
+++ b/client/style/note-home-list.css
@@ -157,6 +157,14 @@ input{
     color: white;
 }
 
+.dark-mode .dropdown-content{
+    background-color: #334249;
+}
+
+.dark-mode .dropdown-option{
+    background-color: #3d3d3d;
+}
+
  
 /* BODY */
 .note-list{
